 * Clean up the list object in epadmin schema

2008-05-02 tdb
 * Added Import plugin for ORE resource maps

2008-05-07 tdb
 * Export Subjects in the same format as plain text
 * Added admin tool to check the subject tree for orphaned elements or circular
    references

2008-05-09 tdb
 * OREResource tests for MIME::Types

2008-05-12 tdb
 * Changed ordervalues columns to LONGTEXT from TEXT, fixing #3369
 * Check current_user exists before accessing it in Subject plugin
 * UTF8 => utf-8 in email charset, fixing #3370

2008-05-12 dct05r
 * ORE Resource Map Export Plugin

2008-05-13 tdb
 * Removed deprecated methods: make_buffer, garbage_collect, dispose_buffer, from_buffer, install_table
 * Check tables exist before attempting to create them when creating dataset tables (allows update_database_structure to "fill in the gaps")

2008-05-15 tdb
 * Reduced background images to 1px wide, reducing file size

2008-05-16 tdb
 * Added "dblanguages" config option to control the database encoding

2008-05-16 cjg 
 * Fixed bug in toolbox which prevented searching sub-objects and linked items.

2008-05-16 cjg 
 * Added boxes plugin system for EPrint summary pages.

2008-05-16 cjg 
 * Improved text-browsing for Items and Review screen-- use of alt tags on icons.

2008-05-16 cjg 
 * Added AJAX Phrase editor!

2008-05-16 tdb
 * Removed redundant add_field script (use update_database_structure)

2008-05-19 tdb
 * Fixed bug in Session::get_secure that returned false in Auth stage
 * Added support for an "auth_basic" config to use basic authentication on specific URLs

2008-05-20 tdb
 * Render sub-object XML using MetaField::Subobject on XML export

2008-05-20 cjg
 * new Script option: as_string, which converts a typed value to a plain string. Useful for inserting a value into an attribute.
 * epc:phrase refs now expound out {} so values from the object can be used to build the phrase id.
 * Redesigned document citation to be neater and show all fields.
  
